--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "amo_widget_app_package",
+    "name": "amocrm_widget_framework",
     "version": "0.0.1",
     "description": "",
-    "main": "./dist/build.js",
+    "main": "./dist/build.min.js",
     "author": "Roman Mazyrin",
     "license": "MIT",
     "scripts": {
@@ -19,12 +19,14 @@
         ]
     },
     "dependencies": {
-        "axios": "^1.2.3",
+        "axios": "^1.4.0",
         "classnames": "^2.3.2",
-        "effector": "^22.5.0",
-        "effector-react": "^22.4.0",
+        "effector": "^22.8.6",
+        "effector-react": "^22.5.3",
         "intl-tel-input": "^17.0.19",
-        "lodash": "^4.17.21",
+        "lodash.clonedeepwith": "^4.5.0",
+        "lodash.get": "^4.4.2",
+        "lodash.merge": "^4.6.2",
         "prop-types": "^15.8.1",
         "qs": "^6.11.0",
         "react": "^18.2.0",
