--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
         "lodash.merge": "^4.6.2",
         "prop-types": "^15.8.1",
         "qs": "^6.11.2",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "toastr": "^2.1.4"
+    },
+    "peerDependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
         "@babel/core": "^7.22.9",
@@ -57,6 +59,8 @@
         "jest-coverage-badges": "^1.1.2",
         "lint-staged": "^13.2.3",
         "path": "^0.12.7",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "sass": "^1.63.6",
         "sass-loader": "^13.3.2",
         "stripcomment-loader": "^0.1.0",
