--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "lodash.merge": "^4.6.2",
         "prop-types": "^15.8.1",
         "qs": "^6.11.2",
-        "toastr": "^2.1.4"
+        "toastify-js": "^1.12.0"
     },
     "peerDependencies": {
         "react": "^18.2.0",
@@ -68,6 +68,7 @@
         "terser-webpack-plugin": "^5.3.9",
         "twig": "^1.16.0",
         "webpack": "^5.88.2",
+        "webpack-bundle-analyzer": "^4.9.0",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.1",
         "webpack-merge": "^5.9.0"
