--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-    "name": "amo_widget_app_package",
+    "name": "amocrm_widget_framework",
     "version": "0.0.1",
     "description": "",
-    "main": "./dist/build.js",
+    "main": "./dist/build.min.js",
     "author": "Roman Mazyrin",
     "license": "MIT",
+    "files": [
+        "README.md",
+        "dist/"
+    ],
     "scripts": {
         "prepare": "husky install",
         "dev": "cross-env NODE_ENV=development webpack-dev-server --open --config webpack/webpack.config.dev.js",
@@ -19,47 +23,54 @@
         ]
     },
     "dependencies": {
-        "axios": "^1.2.3",
+        "axios": "^1.4.0",
         "classnames": "^2.3.2",
-        "effector": "^22.5.0",
-        "effector-react": "^22.4.0",
-        "intl-tel-input": "^17.0.19",
-        "lodash": "^4.17.21",
+        "effector": "^22.8.6",
+        "effector-react": "^22.5.3",
+        "intl-tel-input": "^17.0.21",
+        "lodash.clonedeepwith": "^4.5.0",
+        "lodash.get": "^4.4.2",
+        "lodash.merge": "^4.6.2",
         "prop-types": "^15.8.1",
-        "qs": "^6.11.0",
+        "qs": "^6.11.2",
+        "toastify-js": "^1.12.0"
+    },
+    "peerDependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "toastr": "^2.1.4"
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.20.12",
-        "@babel/eslint-parser": "^7.19.1",
+        "@babel/core": "^7.22.9",
+        "@babel/eslint-parser": "^7.22.9",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-proposal-throw-expressions": "^7.18.6",
-        "@babel/plugin-transform-runtime": "^7.19.6",
-        "@babel/preset-env": "^7.20.2",
-        "@babel/preset-react": "^7.18.6",
-        "babel-loader": "^9.1.2",
+        "@babel/plugin-proposal-throw-expressions": "^7.22.5",
+        "@babel/plugin-transform-runtime": "^7.22.9",
+        "@babel/preset-env": "^7.22.9",
+        "@babel/preset-react": "^7.22.5",
+        "babel-loader": "^9.1.3",
         "clean-webpack-plugin": "^4.0.0",
         "cross-env": "^7.0.3",
-        "css-loader": "^6.7.3",
-        "eslint": "^8.32.0",
+        "css-loader": "^6.8.1",
+        "eslint": "^8.45.0",
         "eslint-config-airbnb": "^19.0.4",
-        "html-webpack-plugin": "^5.5.0",
+        "html-webpack-plugin": "^5.5.3",
         "husky": "^8.0.3",
-        "jest": "^29.3.1",
+        "jest": "^29.6.1",
         "jest-coverage-badges": "^1.1.2",
-        "lint-staged": "^13.1.0",
+        "lint-staged": "^13.2.3",
         "path": "^0.12.7",
-        "sass": "^1.57.1",
-        "sass-loader": "^13.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "sass": "^1.63.6",
+        "sass-loader": "^13.3.2",
         "stripcomment-loader": "^0.1.0",
-        "style-loader": "^3.3.1",
-        "terser-webpack-plugin": "^5.3.6",
-        "twig": "^1.15.4",
-        "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1",
-        "webpack-dev-server": "^4.11.1",
-        "webpack-merge": "^5.8.0"
+        "style-loader": "^3.3.3",
+        "terser-webpack-plugin": "^5.3.9",
+        "twig": "^1.16.0",
+        "webpack": "^5.88.2",
+        "webpack-bundle-analyzer": "^4.9.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1",
+        "webpack-merge": "^5.9.0"
     }
 }
